retry to fix spacing

--- a/style.css
+++ b/style.css
@@ -2,18 +2,15 @@
   margin: 0;
   padding: 0;
 }
-html {
-  height: 100%;
-}
 body {
-  min-height: 100%;
+  height: 100vh;
 }
 h3 {
   padding: 1%;
   margin-bottom: -7.5%;
 }
 footer ul{
-  height: 10%;
+  height: 10vh;
   display:flex;
   flex-direction:row;
   justify-content:flex-end;
@@ -29,7 +26,7 @@ footer li a {
 .foodType{
   background-color: gray;
   width: 100%;
-  height: 10%;
+  height: 10vh;
   font-size: 1.5em;
   display:flex;
   align-items: center;
@@ -87,7 +84,7 @@ input[type="text"] {
   padding: 1%;
 }
 #container {
-  height: 90%;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
